--- a/_posts/2014-09-28-git-ssh.md
+++ b/_posts/2014-09-28-git-ssh.md
@@ -1,13 +1,19 @@
+
+
 ---
-layout: post
-title: "ssh添加公钥"
-description: ""
-category: 技术分享
-tags: [git]
+layout:     post
+title:      "ssg添加公钥"
+subtitle:   ""
+date:       2014-09-28
+author:     "zhangdadi"
+header-img:"img/post-bg-universe.jpg"
+
+catalog: true
+tags:
+    - ssh
+    - 技术分享
 ---
-{% include JB/setup %}
-# ssh添加公钥
----
+
 
 ## 生成本地ssh密钥
 
