--- a/_posts/2014-09-30-ios-call.md
+++ b/_posts/2014-09-30-ios-call.md
@@ -1,13 +1,18 @@
+
+
 ---
-layout: post
-title: "delegate,block,notification三者区别？"
-description: ""
-category: 技术分享
-tags: [iOS]
+layout:     post
+title:      "delegate,block,notification三者区别？"
+subtitle:   ""
+date:       2014-09-30
+author:     "zhangdadi"
+header-img:"img/post-bg-universe.jpg"
+
+catalog: true
+tags:
+    - iOS
 ---
-{% include JB/setup %}
-# delegate,block,notification三者区别？   
----
+
 
 我们经常在开发中遇到各种回调的时候，delegate,block,以及通知以上三者经常用到，这3者有什么区别呢，客官请听我慢慢道来。
 
