--- a/_posts/2015-05-21-down.md
+++ b/_posts/2015-05-21-down.md
@@ -1,13 +1,18 @@
+
+
 ---
-layout: post
-title: "扫描二维码下载现象"
-description: ""
-category: 技术分享
-tags: [下载]
+layout:     post
+title:      "扫描二维码下载现象 "
+subtitle:   ""
+date:       2015-05-21
+author:     "zhangdadi"
+header-img:"img/post-bg-universe.jpg"
+
+catalog: true
+tags:
+    - 下载
 ---
-{% include JB/setup %}
-# 扫描二维码下载现象   
----
+
 
 
 
