--- a/_posts/2016-04-07-2-iOS-1.md
+++ b/_posts/2016-04-07-2-iOS-1.md
@@ -1,13 +1,20 @@
+
+
 ---
-layout: post
-title: "iOS多线程之序章 "
-description: ""
-category: iOS多线程
-tags: [iOS,多线程]
+layout:     post
+title:      "iOS多线程之序章"
+subtitle:   ""
+date:       2016-04-07
+author:     "zhangdadi"
+header-img:"img/post-bg-universe.jpg"
+
+catalog: true
+tags:
+    - iOS
+    - 多线程
+  
 ---
-{% include JB/setup %}
-# iOS多线程之序章   
----
+
 
 
 本章节主要学习iOS开发中的多线程内容，在开发过程中大家多多少少都会使用到多线程，今天大家就和我一起来了解多线程的秘密吧！
