--- a/_posts/2014-09-26-2dx-copy.md
+++ b/_posts/2014-09-26-2dx-copy.md
@@ -1,11 +1,11 @@
-
 ---
 layout: post
-title: cocos2dx-新建工程时避免文件和文件夹的拷贝
+title: 书店的灯光
 categories: [blog ]
-tags: [2dx ]
-description: cocos2dx-新建工程时避免文件和文件夹的拷贝
+tags: [book, life, travel]
+description: 每一个书店 都有自己的面容与灵魂。
 ---
+
 
 
 * 在D盘根目录上新建一个文件夹cocos2dxSource，再把D:\cocos2d-2.0-x-2.0.4目录下的cocos2dx,CocosDenshion和external拷贝到这个目录下面，并且再新建一个文件夹libs，具体目录结构如下图：
