--- a/_posts/2014-09-26-新建工程时避免文件和文件夹的拷贝.md
+++ b/_posts/2014-09-26-新建工程时避免文件和文件夹的拷贝.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: cocos2dx-新建工程时避免文件和文件夹的拷贝
-categories: [blog ]
+categories: [技术分享 ]
 tags: [2dx, iOS ]
 description: 
 ---
